--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="styles/auth.css">
 	<title>Quizzy - Quiz App</title>
 </head>
 <body>
 	
+
+	<script src="scripts/index.js"></script>
 </body>
 </html>
