Adding forget password

--- a/pages/login.html
+++ b/pages/login.html
@@ -37,7 +37,8 @@
 						<input placeholder="Enter your username" type="password">
 					</label>
 				</section>
-				<button>Register</button>
+                <a class="forget" href="#">Forget Password?</a>
+				<button>Login</button>
 				<p class="login-p">Not a member? <a href="../index.html"> Register now </a></p>
 			</div>
 		</section>
