Adding id's for inputs for js file

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 						<p>Username</p>
 					</div>
 					<label class="user-input" for="username">
-						<input placeholder="Enter your username" type="text">
+						<input id="username" placeholder="Enter your username" type="text">
 					</label>
 				</section>
 
-				<section class="user-input-container">
+				<section class="user-input-container user-input-email-container">
 					<div class="user-input-header">
 						<img src="assets/icons/mail.svg" alt="mail svg icon">
-						<p>Email </p>
+						<p>Email</p>
 					</div>
-					<label class="user-input" for="username">
-						<input placeholder="Enter your email" type="email">
+					<label class="user-input user-input-email" for="email">
+						<input id="email" placeholder="Enter your email" type="email">
 					</label>
 				</section>
 
@@ -43,8 +43,8 @@
 						<img src="assets/icons/password.svg" alt="password svg icon">
 						<p>Password</p>
 					</div>
-					<label class="user-input" for="username">
-						<input placeholder="Enter your username" type="password">
+					<label class="user-input" for="password">
+						<input id="password" placeholder="Enter your username" type="password">
 					</label>
 				</section>
 				<button>Register</button>
