--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<main>
 		<section class="auth-container">
 			<div class="auth-header">
-				<h1>Register</h1>
+				<h1>Become a Member!</h1>
 			</div>
 			<div class="auth-content">
 				<section class="user-input-container">
