--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<p>Username</p>
 					</div>
 					<label class="user-input" for="username">
-						<input id="username" placeholder="Enter your username" type="text">
+						<input required id="username" placeholder="Enter your username" type="text">
 					</label>
 				</section>
 
@@ -34,7 +34,7 @@
 						<p>Email</p>
 					</div>
 					<label class="user-input user-input-email" for="email">
-						<input id="email" placeholder="Enter your email" type="email">
+						<input required id="email" placeholder="Enter your email" type="email">
 					</label>
 				</section>
 
@@ -44,14 +44,14 @@
 						<p>Password</p>
 					</div>
 					<label class="user-input" for="password">
-						<input id="password" placeholder="Enter your username" type="password">
+						<input id="password" required id="password" placeholder="Enter your username" type="password">
 					</label>
 				</section>
-				<button>Register</button>
+				<button type="submit" id="register-button">Register</button>
 				<p class="login-p">Already have an account? <a href="pages/login.html"> Login now </a></p>
 			</div>
 		</section>
 	</main>
-	<script src="scripts/index.js"></script>
+	<script src="scripts/register.js"></script>
 </body>
 </html>
