Creating empty p for error or succes

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 						<input id="password" required id="password" placeholder="Enter your username" type="password">
 					</label>
 				</section>
+				<p id="error-message" class="error-message"></p>
 				<button type="submit" id="register-button">Register</button>
 				<p class="login-p">Already have an account? <a href="pages/login.html"> Login now </a></p>
 			</div>
