--- a/pages/login.html
+++ b/pages/login.html
@@ -15,7 +15,7 @@
 	<main>
 		<section class="auth-container">
 			<div class="auth-header">
-				<h1>Welcome Back!</h1>
+				<h1 id="welcome">Welcome Back!</h1>
 			</div>
 			<div class="auth-content">
 				<section class="user-input-container">
@@ -24,7 +24,7 @@
 						<p>Username</p>
 					</div>
 					<label class="user-input" for="username">
-						<input placeholder="Enter your username" type="text">
+						<input required id="username" placeholder="Enter your username" type="text">
 					</label>
 				</section>
 
@@ -34,15 +34,16 @@
 						<p>Password</p>
 					</div>
 					<label class="user-input" for="username">
-						<input placeholder="Enter your username" type="password">
+						<input required id="password" placeholder="Enter your username" type="password">
 					</label>
 				</section>
+                <p id="error-message" class="error-message"></p>
                 <a class="forget" href="#">Forget Password?</a>
-				<button>Login</button>
+				<button id="login-button">Login</button>
 				<p class="login-p">Not a member? <a href="../index.html"> Register now </a></p>
 			</div>
 		</section>
 	</main>
-	<script src="scripts/index.js"></script>
+	<script src="../scripts/login.js"></script>
 </body>
 </html>
