--- a/pages/login.html
+++ b/pages/login.html
@@ -20,11 +20,11 @@
 			<div class="auth-content">
 				<section class="user-input-container">
 					<div class="user-input-header">
-						<img src="../assets/icons/user.svg" alt="user svg icon">
+						<img src="../assets/icons/mail.svg" alt="email svg icon">
 						<p>Username</p>
 					</div>
-					<label class="user-input" for="username">
-						<input required id="username" placeholder="Enter your username" type="text">
+					<label class="user-input" for="email">
+						<input required id="email" placeholder="Enter your username" type="email">
 					</label>
 				</section>
 
