--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/dashboard.css">
     <title>Admin Dashboard</title>
 </head>
 <body>
-    
+    <header>
+        <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo">
+    </header>
 </body>
 </html>
