--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo">
+        <a href="../pages/login.html">Logout</a>
     </header>
 </body>
 </html>
