--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/dashboard.css">
+    <link rel="stylesheet" href="../styles/template.css">
     <title>Admin Dashboard</title>
 </head>
 <body>
     <header>
         <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo">
-        <a href="../pages/login.html">Logout</a>
+        <section class="user-profile">
+            <a href="../pages/login.html">Logout</a>
+            <p>Admin</p>
+        </section>
     </header>
 </body>
 </html>
