Creating logout with username

--- a/pages/home.html
+++ b/pages/home.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/template.css">
     <title>Home Page</title>
 </head>
 <body>
-    
+    <header>
+        <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo">
+        <section class="user-profile">
+            <a href="../pages/login.html">Logout</a>
+            <p>adamabdallah</p>
+        </section>
+    </header>
 </body>
 </html>
