Creating logout with username

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -7,12 +7,20 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    <header>
-        <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo">
-        <section class="user-profile">
-            <a href="../pages/login.html">Logout</a>
-            <p>Admin</p>
-        </section>
-    </header>
+    <div class="wrapper">
+        <header>
+            <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo">
+            <section class="user-profile">
+                <a href="../pages/login.html">Logout</a>
+                <p>Admin</p>
+            </section>
+        </header>
+        <main>
+    
+        </main>
+        <footer>
+            <p>Created by Adam Abdallah!</p>
+        </footer>
+    </div>
 </body>
 </html>
