Creating welcome message for user

--- a/pages/home.html
+++ b/pages/home.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/template.css">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
     <title>Home Page</title>
 </head>
 <body>
-    <header>
-        <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo">
-        <section class="user-profile">
-            <a href="../pages/login.html">Logout</a>
-            <p>adamabdallah</p>
-        </section>
-    </header>
+    <div class="wrapper">
+        <header>
+            <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo">
+            <section class="user-profile">
+                <a href="../pages/login.html">Logout</a>
+                <p>adamabdallah</p>
+            </section>
+        </header>
+        <main>
+            <div class="container">
+                <p class="welcome-msg">Welcome back, <span id="user-name">Adam</span>! <br> Ready to test your knowledge?</p>
+            </div>
+        </main>
+        <footer>
+            <p>Created by Adam Abdallah!</p>
+        </footer>
+    </div>
 </body>
 </html>
