Changing some errors and typos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<p>Password</p>
 					</div>
 					<label class="user-input" for="password">
-						<input id="password" required id="password" placeholder="Enter your username" type="password">
+						<input id="password" required id="password" placeholder="Enter your password" type="password">
 					</label>
 				</section>
 				<p id="error-message" class="error-message"></p>
