--- a/pages/login.html
+++ b/pages/login.html
@@ -34,7 +34,7 @@
 						<p>Password</p>
 					</div>
 					<label class="user-input" for="username">
-						<input required id="password" placeholder="Enter your username" type="password">
+						<input required id="password" placeholder="Enter your password" type="password">
 					</label>
 				</section>
                 <p id="error-message" class="error-message"></p>
