Creating quiz section and list for quizez

--- a/pages/home.html
+++ b/pages/home.html
@@ -21,7 +21,7 @@
             <div class="container">
                 <section class="container-header">
                     <p class="welcome-msg">
-                        Welcome back, <br> <span class="welcome-user" id="welcome-user-name"></span>! <br>
+                        Welcome back, <br> <span class="welcome-user" id="welcome-user-name"></span><br>
                     </p>
                 </section>
                 <h2 class="quiz-section-title">Available Quizzes</h2>
