--- a/pages/home.html
+++ b/pages/home.html
@@ -25,7 +25,12 @@
                     </p>
                 </section>
                 <h2 class="quiz-section-title">Available Quizzes</h2>
-                <div id="quiz-list" class="quiz-list"></div>
+                <div id="quiz-list" class="quiz-list">
+                    <div class="quiz-card">
+                        <h3 id="quiz-title">Quiz Title</h3>
+                        <p id="quiz-desc">Tes Test Test Test</p>
+                        <button id="quiz-button">Take Quiz</button>
+                    </div>
             </div>
         </main>
         <footer>
