--- a/pages/home.html
+++ b/pages/home.html
@@ -25,8 +25,7 @@
                     </p>
                 </section>
                 <h2 class="quiz-section-title">Available Quizzes</h2>
-                <div id="quiz-list" class="quiz-list">
-                </div>                
+                <div id="quiz-list" class="quiz-list"></div>                
             </div>
         </main>
         <footer>
