--- a/pages/login.html
+++ b/pages/login.html
@@ -18,13 +18,13 @@
 				<h1 id="welcome">Welcome Back!</h1>
 			</div>
 			<div class="auth-content">
-				<section class="user-input-container">
+				<section class="user-input-container user-input-email-container">
 					<div class="user-input-header">
 						<img src="../assets/icons/mail.svg" alt="email svg icon">
-						<p>Username</p>
+						<p>Email</p>
 					</div>
 					<label class="user-input" for="email">
-						<input required id="email" placeholder="Enter your username" type="email">
+						<input required id="email" placeholder="Enter your email" type="email">
 					</label>
 				</section>
 
