Creating home return button for user and quiz section

--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -10,6 +10,16 @@
 <body>
     <header>
         <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo header">
+        <a id="home-button" href="#">Home Page</a>
     </header>
+    <main>
+        <div class="container">
+            <h2 id="quiz-section-title" class="quiz-section-title"></h2>
+            <div id="quiz-section" class="quiz-section">
+
+            </div>
+        </div>
+    </main>
+    <script src="../scripts/quiz.js"></script>
 </body>
 </html>
