Cleaning html from hardcoded

--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -15,15 +15,7 @@
     <main>
         <div class="container">
             <h2 id="quiz-section-title" class="quiz-section-title"></h2>
-            <div id="quiz-section" class="quiz-section">
-                <h1 id="quiz-question">What does HTML stand for?</h1>
-                <section class="quiz-options" id="quiz-options">
-                    <button>Hyper Text Markup Language</button>
-                    <button>Hyper Text Makeup Language</button>
-                    <button>Home Tool Markup Language</button>
-                </section>
-                <p><span id="quiz-points">10 </span>points</p>
-            </div>
+            <div id="quiz-section" class="quiz-section"></div>
         </div>
     </main>
     <script src="../scripts/quiz.js"></script>
