Creating a ready text

--- a/pages/home.html
+++ b/pages/home.html
@@ -22,6 +22,7 @@
                 <section class="container-header">
                     <p class="welcome-msg">
                         Welcome back, <br> <span class="welcome-user" id="welcome-user-name"></span><br>
+                        <h1 class="ready-text">Ready to test your skills?</h1>
                     </p>
                 </section>
                 <h2 class="quiz-section-title">Available Quizzes</h2>
