Creating greeting text

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/template.css">
+    <link rel="stylesheet" href="../styles/dashboard.css">
     <title>Admin Dashboard</title>
 </head>
 <body>
@@ -16,7 +17,9 @@
             </section>
         </header>
         <main>
-    
+            <section class="container">
+                <h1>Welcome to the Admin Panel</h1>
+            </section>
         </main>
         <footer>
             <p>Created by Adam Abdallah!</p>
