Creating section to display users

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -19,11 +19,15 @@
         <main>
             <section class="container">
                 <h1>Welcome to the Admin Panel</h1>
+                <section id="user-container" class="user-container">
+                    
+                </section>
             </section>
         </main>
         <footer>
             <p>Created by Adam Abdallah!</p>
         </footer>
     </div>
+    <script src="../scripts/dashboard.js"></script>
 </body>
 </html>
