Creating clear users list img

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -22,6 +22,8 @@
                 <section id="user-container" class="user-container">
                     
                 </section>
+                <div class="clear-users">
+                    <img id="clear-users" src="../assets/icons/delete.svg" alt="">
             </section>
         </main>
         <footer>
