--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -15,6 +15,7 @@
     <main>
         <div class="container">
             <h2 id="quiz-section-title" class="quiz-section-title"></h2>
+            <p id="final-score" class="final-score"></p>
             <div id="quiz-section" class="quiz-section"></div>
         </div>
     </main>
