Changing p to button forget password

--- a/pages/login.html
+++ b/pages/login.html
@@ -38,7 +38,7 @@
 					</label>
 				</section>
                 <p id="error-message" class="error-message"></p>
-                <a class="forget" href="#">Forget Password?</a>
+                <button id="forgetB" class="forgetB" type="button">Forget Password?</button>
 				<button id="login-button">Login</button>
 				<p class="login-p">Not a member? <a href="../index.html"> Register now </a></p>
 			</div>
