Creating a reset form

--- a/pages/passwordReset.html
+++ b/pages/passwordReset.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/passwordReset.css">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
     <title>Password Reset</title>
 </head>
 <body>
     <div class="wrapper">
         <header>
             <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo">
+            <a href="../index.html">Main Page</a>
         </header>
+        <main>
+            <section class="container">
+                <div class="content">
+                    <h1>Forget your password?</h1>
+                    <div class="forget-input">
+                        <img src="../assets/icons/mail.svg" alt="mail icon svg"><p>Email</p>
+                        <input type="email" name="email" id="email" placeholder="Enter your email">
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
 </body>
 </html>
