--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/template.css">
     <link rel="stylesheet" href="../styles/quiz.css">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
     <title>Quizzy Quiz</title>
 </head>
 <body>
@@ -19,6 +20,9 @@
             <div id="quiz-section" class="quiz-section"></div>
         </div>
     </main>
+    <footer>
+        <p>Created by Adam Abdallah</p>
+    </footer>
     <script src="../scripts/quiz.js"></script>
 </body>
 </html>
