--- a/pages/home.html
+++ b/pages/home.html
@@ -13,7 +13,7 @@
         <header>
             <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo">
             <section class="user-profile">
-                <a href="../pages/login.html">Logout</a>
+                <a href="../pages/login.html" id="logout-btn">Logout</a>
                 <p id="header-user-name"></p>
             </section>            
         </header>
@@ -33,6 +33,8 @@
             <p>Created by Adam Abdallah!</p>
         </footer>
     </div>
+
     <script src="../scripts/home.js"></script>
+    <script src="../scripts/index.js"></script>
 </body>
 </html>
