--- a/pages/home.html
+++ b/pages/home.html
@@ -9,7 +9,7 @@
     <title>Quizzy | Home</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper fade-in">
         <header>
             <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo">
             <section class="user-profile">
