Creating header button

--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <img src="../assets/logos/quizzy-logo.png" alt="Quizzy logo header">
-        <a id="home-button" href="#">Home Page</a>
+        <button id="home-button">Home Page</button>
     </header>
     <main>
         <div class="container">
